--- a/webClient/index.html
+++ b/webClient/index.html
@@ -38,8 +38,8 @@
                 <input type="text">
             </div>
             <div class="tabs-items">
-                <button id="touch-pad-b" class="tabs-item"> TP</button>
-                <button id="hot-key-b" class="tabs-item"> HK</button>
+                <button id="touch-pad-b" class="tab-item selected"> TP</button>
+                <button id="hot-key-b" class="tab-item"> HK</button>
             </div>
         </div>
     </div>
